style: fix question mark dot clipping by adjusting viewBox height and setting overflow visible

--- a/css/style.css
+++ b/css/style.css
@@ -2072,6 +2072,7 @@ img { display: block; max-width: 100%; }
     width: 100%;
     height: 100%;
     display: block;
+    overflow: visible;
 }
 
 .picto-person {
